# rpncalc

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  README.md  autoconf.sh  configure.ac  rpncalc.m4
src/: ptime.c  ptime.h  rpncalc.c  rpncalc.h  rpnmain.c  variates.c  variates.h
win32/: install.bat  rpn.sln
win32/rpn/: rpn.vcxproj
win32/rpnlib/: rpnlib.vcxproj
